--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
   <body>
     <main>
       <section id="rating-form">
-        <div class="image" aria-label="Star icon"></div>
+        <div class="image" aria-label="Star"></div>
         <h1>How did we do?</h1>
         <p>
           Please let us know how we did with your support request. All feedback
@@ -43,7 +43,7 @@
       </section>
 
       <section id="thank-you">
-        <div class="image" aria-label="Illustration thank you">
+        <div class="image" aria-hidden="true">
           <svg width="162" height="108" xmlns="http://www.w3.org/2000/svg">
             <g fill="none">
               <path
